contrast errors fixed

--- a/finalproject/styles/base.css
+++ b/finalproject/styles/base.css
@@ -25,8 +25,8 @@ body {
 }
 
 #closeable-message {
-    background-color: #ff6600;
-    color: white;
+    background-color: #ffaa33;
+    color: #000;
     padding: 10px;
     text-align: center;
     /* display: none; */
@@ -41,12 +41,12 @@ body {
     right: 10px;
     font-weight: bold;
     font-size: 1.2em;
-    color: #721c24;
+    color: #000;
     transform: translateY(-50%);
 }
 
 #close-button:hover {
-    color: white;
+    color: #555;
 }
 
 #message-content {
@@ -68,7 +68,7 @@ header h1 {
 
 h1:first-child a:hover {
     background-color: transparent; /* Remove hover effect for the first child anchor (Scoots) */
-    color: #ff6600;
+    color: #ffaa33;
     transition: color 0.3s ease;
 }
 
@@ -146,8 +146,8 @@ nav a {
 
 .cta a {
     display: inline-block;
-    background-color: #ff6600;
-    color: white;
+    background-color: #ffaa33;
+    color: #000;
     padding: 10px 20px;
     text-decoration: none;
     font-size: 1.2em;
@@ -155,7 +155,7 @@ nav a {
 }
 
 .cta a:hover {
-    background-color: #e55d00;
+    background-color: #ff8800;;
 }
 
 main {
@@ -294,8 +294,8 @@ footer {
 caption {
     padding: 10px;
     caption-side: top;
-    background-color: #ff6600;
-    color: white;
+    background-color: #ffaa33;
+    color: #000;
     font-size: x-large;
     font-weight: bold;
 }
@@ -359,16 +359,6 @@ th:first-child {
     color: #ff6600; 
 }
 
-#rental-services a {
-    color: #ff6600;
-    text-decoration: underline;
-    transition: color 0.3s ease;
-}
-
-#rental-services a:hover {
-    color: #e55d00;
-}
-
 form fieldset {
     margin: 2rem 0;
     border: 1px solid #000;
@@ -400,8 +390,8 @@ textarea {
 }
 
 button {
-    background-color: #ff6600;
-    color: white;
+    background-color: #ffaa33;
+    color: #000;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
@@ -410,7 +400,7 @@ button {
 }
 
 button:hover {
-    background-color: #e55d00;
+    background-color: #ff8800;
 }
 
 
@@ -462,20 +452,6 @@ textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
-}
-
-button {
-    background-color: #ff6600;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    font-size: 1.2em;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #e55d00;
 }
 
 /* THANKS RESERVATIONS AND CONTACT PAGES */
